tests/gpu_struct/compile-fail/unit_struct.rs
use prgpu::gpu_struct;

#[gpu_struct]
pub struct Unit;

fn main() {}
